@@ -1,20 +1,25 @@
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 
 public class BashScriptExecuter {
-    public static void CreateManager() throws IOException {
-        String[] env = {"PATH=/bin:/usr/bin/"};
-        String cmd = "sh ~/IdeaProjects/MapReduce/src/main/resources/BashScripts/CreateManager.sh";
-        Process process = Runtime.getRuntime().exec(cmd, env);
+    public static void CreateManager() throws IOException, InterruptedException {
+        String[] command = {"/home/omar/IdeaProjects/MapReduce/src/main/resources/BashScripts/CreateManager.sh"};
+        ProcessBuilder processBuilder = new ProcessBuilder(command);
+        processBuilder.inheritIO();
+        Process process = processBuilder.start();
     }
     public static void CreateMappers(int numberOfMappers) throws IOException {
-        String[] env = {"PATH=/bin:/usr/bin/"};
-        String cmd = "bash ~/IdeaProjects/MapReduce/src/main/resources/BashScripts/CreateMappers.sh "+numberOfMappers;
-        Process process = Runtime.getRuntime().exec(cmd, env);
+        String[] command = {"/home/omar/IdeaProjects/MapReduce/src/main/resources/BashScripts/CreateMappers.sh",String.valueOf(numberOfMappers)};
+        ProcessBuilder processBuilder = new ProcessBuilder(command);
+        processBuilder.inheritIO();
+        Process process = processBuilder.start();
     }
     public static void CreateReducers(int numberOfReducers) throws IOException {
-        String[] env = {"PATH=/bin:/usr/bin/"};
-        String cmd = "bash ~/IdeaProjects/MapReduce/src/main/resources/BashScripts/CreateReducers.sh "+numberOfReducers;
-        Process process = Runtime.getRuntime().exec(cmd, env);
+        String[] command = {"/home/omar/IdeaProjects/MapReduce/src/main/resources/BashScripts/CreateReducers.sh", String.valueOf(numberOfReducers)};
+        ProcessBuilder processBuilder = new ProcessBuilder(command);
+        processBuilder.inheritIO();
+        Process process = processBuilder.start();
     }
 }
